smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-unclosed-parameters2.smithy
// Parse error at line 3, column 28 near `,`: Unexpected EOF
namespace com.foo
map MyMap { key: SomeShape,
